2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-indexer.c (indexer_update_word): Behave
	nicely with 1-2 elements arrays. Use the correct array index when
	doing operations on the element at hand.

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* src/Makefile.am:
	* src/libtracker/Makefile.am:
	* src/libtracker/tracker-files.c:
	* src/libtracker/tracker-get-meta-for-folder.c:
	* src/libtracker/tracker-query.c:
	* src/libtracker/tracker-search.c:
	* src/libtracker/tracker-stats.c:
	* src/libtracker/tracker-status.c:
	* src/libtracker/tracker-tag.c:
	* src/libtracker/tracker-unique.c:
	* src/tracker-utils/tracker-files.c:
	* src/tracker-utils/tracker-query.c:
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-stats.c: 
	* src/tracker-utils/tracker-status.c:
	* src/tracker-utils/tracker-tag.c: Moved all utilities to a
	tracker-utils folder instead of mixing them up with the libtracker
	library. 

2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* src/trackerd/tracker-dbus.c (indexer_continue_async_cb): Make error
	message more helpful.

2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* data/dbus/tracker-indexer.xml: Add Shutdown method.
	* src/tracker-indexer/tracker-indexer.[ch] (tracker_indexer_stop)
	(tracker_indexer_shutdown): Added internal and DBus method. Also added
	a gboolean parameter to ::finished so we know whether the indexing was
	interrupted.
	* src/tracker-indexer/tracker-marshal.list: modify marshaller for
	::finished.
	* src/tracker-indexer/tracker-main.c (indexer_finished_cb): Quit
	immediately if the indexing was interrupted.
	* src/tracker-indexer/tracker-dbus.c (name_owner_changed_cb)
	(dbus_register_object): Listen for changes in the daemon service
	ownership. If the daemon dissapears, shut down the indexer.

2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Change flushing parameters so